menu taking extra space from right is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ font-family: 'Open Sans', sans-serif;
 font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;
+
+}
+html,body{
+  overflow-x: hidden;
 }
 .purpole{
   background-color: #856088;
